--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,11 +1,8 @@
 <resources>
-    <string name="app_name">TermostatToEndVersion</string>
-    <string name="navigation_drawer_open">Open navigation drawer</string>
-    <string name="navigation_drawer_close">Close navigation drawer</string>
+    <string name="app_name">Термостат</string>
     <string name="nav_header_title">Термостат</string>
-    <string name="nav_header_subtitle">android.studio@android.com</string>
-    <string name="nav_header_desc">Navigation header</string>
-    <string name="action_settings">Settings</string>
+    <string name="nav_header_desc">Навигация</string>
+    <string name="add_device">Добавить устройство</string>
 
     <string name="menu_home">Главная страница</string>
     <string name="menu_device">Устройства</string>
